2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>

	* src/gnuk.h (LED_OFF): New.

	* src/usb-ccid.c (usb_event_handle): LED off on sleep.
	(ccid_thread): Use constant pointer for	chopstx_poll.
	(poll_event_intr): Remove.

2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (usb_event_handle): Allow sleep on suspend.

	* src/usb_ctrl.c (usb_device_reset): Fix device state.

2017-11-14  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb-ccid.c (ccid_usb_reset): Remove
	(usb_event_handle): Return value change to notify
	caller about needs for going out of the loop.
	Support USB suspend/resume.
	(ccid_thread): Supporting USB suspend, sleep forever with
	timeout_p = NULL.

	* src/main.c (main): Add USB_DEVICE_STATE_ prefix.
	* src/usb_ctrl.c: Likewise.
	(usb_device_reset): Don't call ccid_usb_reset.
	(usb_set_configuration, usb_set_interface): Likewise.

	* src/usb_desc.c (device_desc): bcdUSB = 2.0, supporting
	suspend/resume.

2017-11-13  NIIBE Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c: Use new const USB_DEVICE_STATE_*
	* src/main.c (main): Likewise.
	* src/usb-ccid.c: Likewise.
	(INTR_REQ_USB): Remove.  Use the definition
	in usb-lld.h.

2017-11-08  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (gpg_do_kdf_check): New.
	(proc_resetting_code): Use gpg_do_kdf_check.
	* src/openpgp.c (cmd_verify, cmd_change_password)
	(cmd_reset_user_password): Likewise.

2017-11-07  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (proc_resetting_code): Error when
	it's not pass-hash.

	* src/openpgp.c (cmd_verify, cmd_change_password)
	(cmd_reset_user_password): Avoid authentication error
	by old GnuPG which doesn't support KDF.

2017-11-06  NIIBE Yutaka  <gniibe@fsij.org>

	* tests/test_empty_card.py (test_extended_capabilities): Support
	KDF-DO.
	* test/features/802_get_data_static.feature: Likewise.
	* test/features/402_get_data_static.feature: Likewise.
	* test/features/002_get_data_static.feature: Likewise.

2017-11-02  NIIBE Yutaka  <gniibe@fsij.org>
